clean: ToDo with Optional instead of Nullable